Basic layout of pipeline

--- a/nextflow.config
+++ b/nextflow.config
@@ -31,6 +31,8 @@ params {
   sitesB      = null
   bamA        = null
   bamB        = null
+  labelA      = "A"
+  labelB      = "B"
   FC          = 0.585
   t           = 2
   filePrefix  = "ISquant"
