added plot generation

--- a/nextflow.config
+++ b/nextflow.config
@@ -35,6 +35,8 @@ params {
   labelB      = "B"
   FC          = 0.585
   t           = 2
+  axMin       = 0
+  axMax       = 8
   filePrefix  = "ISquant"
   outputDir   = "results"
 }
